k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dashboard-kube.flapi.org
      secretName: kubernetes-dashboard-tls
  rules:
    - host: dashboard-kube.flapi.org
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
